--- a/client/main.scss
+++ b/client/main.scss
@@ -1,9 +1,11 @@
 /* CSS declarations go here */
 body {
   font-family: "Quicksand", serif;
-  h1 {
+  h1, h2 {
     font-family: 'Fira Sans', sans-serif;
     font-weight: 700;
     font-size: 38px;
+
   }
+
 }
