--- a/imports/ui/pages/admin/responses/pm.scss
+++ b/imports/ui/pages/admin/responses/pm.scss
@@ -5,3 +5,17 @@
   outline: none;
   resize: none;
 }
+
+.recap-video-wrapper {
+  h2 {
+    font-size: 30px;
+    color: #ff9919;
+  }
+}
+
+.full-width-video-wrapper{
+  border: 1px solid #c5c5c5;
+  border-radius: 5px;
+  min-height: 500px;
+  margin-bottom: 25px;
+}
