--- a/imports/ui/pages/client-response/styles/response.scss
+++ b/imports/ui/pages/client-response/styles/response.scss
@@ -28,3 +28,18 @@
   margin-top: 25px;
   margin-bottom: 25px;
 }
+
+.response-not-ready {
+  min-height: 500px;
+  position: relative;
+}
+.response-not-ready h1  {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: 0 auto;
+  margin-top: 20vh;
+  text-align: center;
+}
