admin response status and upload form styles

--- a/imports/ui/pages/admin/responses/pm.scss
+++ b/imports/ui/pages/admin/responses/pm.scss
@@ -28,3 +28,9 @@
   margin-top: 25px;
   margin-bottom: 25px;
 }
+
+.video-upload-wrapper {
+  margin-bottom: 111px;
+  padding: 57px 52px;
+  background-color: #e8e8e8;
+}
