personal response page status

--- a/imports/ui/components/responses/pm.scss
+++ b/imports/ui/components/responses/pm.scss
@@ -34,3 +34,23 @@
   padding: 57px 52px;
   background-color: #e8e8e8;
 }
+.audio-only-label{
+  margin-top:10px;
+  margin-bottom: 40px;
+}
+
+
+.response-not-ready {
+  min-height: 500px;
+  position: relative;
+  text-align: center;
+}
+.response-not-ready   {
+  margin-top:100px;
+}
+
+.response-login-wrapper {
+  border: 1px #cecece solid;
+  border-radius: 5px;
+  padding-bottom: 35px;
+}
