--- a/imports/ui/components/responses/pm.scss
+++ b/imports/ui/components/responses/pm.scss
@@ -54,3 +54,13 @@
   border-radius: 5px;
   padding-bottom: 35px;
 }
+
+.edit-video-form {
+  display:none;
+}
+.edit-video-button{
+  &:hover{
+    text-decoration: underline;
+    cursor: pointer;
+  }
+}
