--- a/imports/ui/components/responses/pm.scss
+++ b/imports/ui/components/responses/pm.scss
@@ -28,6 +28,9 @@
   margin-top: 25px;
   margin-bottom: 25px;
 }
+.single-video-player{
+  border: 1px solid #c5c5c5;
+}
 
 .video-upload-wrapper {
   margin-bottom: 111px;
