over designing things

--- a/imports/ui/components/nav/nav.scss
+++ b/imports/ui/components/nav/nav.scss
@@ -1,15 +1,14 @@
 .navbar-default {
     background-color: #ffffff;
     border-color: #e2e2e2;
-
+    margin-bottom: 0px;
     .navbar-brand {
-		font-family: 'Fira Sans', sans-serif;
+		font-family: 'Chivo', sans-serif;
 		color: #424242;
 	    font-weight: 600;
 	    font-size: 23px;
-	    letter-spacing: 1px;
 	}
-	
+
 }
 
 .blue{
