--- a/client/main.scss
+++ b/client/main.scss
@@ -1,11 +1,19 @@
 /* CSS declarations go here */
 body {
-  font-family: "Quicksand", serif;
+  font-family: "Cardo", serif;
+
   h1, h2 {
-    font-family: 'Fira Sans', sans-serif;
-    font-weight: 700;
+    font-family: 'Chivo', sans-serif;
+    font-weight: 900;
     font-size: 38px;
 
   }
+
+  hr {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid #aaa;
+}
 
 }
