--- a/imports/ui/pages/landing/landing.scss
+++ b/imports/ui/pages/landing/landing.scss
@@ -1,7 +1,8 @@
 .landing-text {
-  color: #757474;
-  font-size: 26px;
+  color: rgba(0,0,0,0.87);
+  font-size: 21px;
   font-weight: 100;
+  font-style: italic;
 }
 .email-signup-copy {
   color: #757474;
