--- a/imports/ui/pages/landing/landing-v2.scss
+++ b/imports/ui/pages/landing/landing-v2.scss
@@ -1,3 +1,26 @@
+// /* CSS declarations go here */
+// body {
+//   font-family: "Cardo", serif;
+//
+//   h1, h2 {
+//     font-family: 'Chivo', sans-serif;
+//     font-weight: 900;
+//     font-size: 38px;
+//
+//   }
+//
+//   hr {
+//     margin-top: 20px;
+//     margin-bottom: 20px;
+//     border: 0;
+//     border-top: 1px solid #aaa;
+// }
+//
+// }
+
+
+
+
 .landing-page-wrapper {
   padding: 0;
 }
@@ -37,7 +60,7 @@ hr.short-divider{
   h2.subheadline {
       font-size: 20px;
       line-height: 30px;
-      color: rgba(0,0,0,0.80);
+      color: rgba(0,0,0,0.75);
   }
   .tiny-joke {
     font-size: 75%;
