--- a/imports/ui/pages/landing/landing-v1.scss
+++ b/imports/ui/pages/landing/landing-v1.scss
@@ -3,3 +3,20 @@
 	border-bottom: 1px solid grey;
 	margin-bottom: 18px;
 }
+
+body h1, body h2 {
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 700;
+    font-size: 38px;
+}
+
+body {
+    font-family: "Quicksand", serif;
+}
+
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  border-top: 1px solid #aaa;
+}
