--- a/imports/ui/pages/landing/landing.scss
+++ b/imports/ui/pages/landing/landing.scss
@@ -14,3 +14,20 @@
 .margin-top-100 {
   margin-top: 100px;
 }
+
+body h1, body h2 {
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 700;
+    font-size: 38px;
+}
+
+body {
+    font-family: "Quicksand", serif;
+}
+
+hr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 0;
+  border-top: 1px solid #aaa;
+}
